# crypto-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  test_tools.py
docs/: index.html  portfolio.html
docs/marketing/: fiverr_gig.md  reddit_post.md  twitter_posts.md  upwork_profile.md
src/: auth.py  server.py
src/tools/: actions.py  defi.py  defi_actions.py  fee_manager.py  onchain.py  portfolio.py  prices.py  swap.py  wallet.py
