[project]
name = "crypto-mcp-server"
version = "0.1.0"
description = "MCP server that gives AI agents crypto/DeFi superpowers - price data, wallet analytics, swap quotes, on-chain intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "kms"}]
keywords = ["mcp", "crypto", "defi", "ai-agent", "blockchain"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
actions = ["web3>=7.0.0"]
full = ["web3>=7.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "web3>=7.0.0"]

[project.scripts]
crypto-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
